--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="theme-color" content="#1e1e2e">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Incubadora de Ideas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1180,6 +1183,351 @@
             color: #ef4444;
             font-size: 13px;
             text-align: center;
+        }
+
+        /* ========== Mobile / responsive ========== */
+        @media (max-width: 768px) {
+            html {
+                -webkit-text-size-adjust: 100%;
+            }
+            body {
+                overflow-x: hidden;
+            }
+
+            /* Header */
+            .header {
+                flex-wrap: wrap;
+                padding: 12px 16px;
+                gap: 10px;
+            }
+            .header-left h1 {
+                font-size: 18px;
+                line-height: 1.3;
+            }
+            .subtitle {
+                font-size: 12px;
+                display: none;
+            }
+            .header-right {
+                gap: 8px;
+                flex-shrink: 0;
+            }
+            .sync-status {
+                padding: 6px 10px;
+                font-size: 11px;
+            }
+            .sync-status span {
+                display: none;
+            }
+            .logout-btn {
+                padding: 10px 14px;
+                font-size: 13px;
+                min-height: 44px;
+                min-width: 44px;
+            }
+
+            /* Main nav */
+            .main-nav {
+                padding: 8px 12px 10px;
+                gap: 6px;
+                flex-wrap: wrap;
+            }
+            .main-nav-btn {
+                flex: 1;
+                min-width: 0;
+                padding: 12px 14px;
+                font-size: 14px;
+                min-height: 44px;
+            }
+
+            /* Board & columns */
+            .board {
+                padding: 12px 16px;
+                gap: 16px;
+                overflow-x: auto;
+                overflow-y: visible;
+                -webkit-overflow-scrolling: touch;
+                scroll-snap-type: x mandatory;
+                padding-bottom: 24px;
+            }
+            .column {
+                min-width: 280px;
+                max-width: 280px;
+                scroll-snap-align: start;
+                scroll-snap-stop: always;
+                padding: 12px;
+                max-height: none;
+            }
+            .column-header h2 {
+                font-size: 14px;
+            }
+            .card-count {
+                padding: 3px 8px;
+                font-size: 11px;
+            }
+
+            /* Cards */
+            .card {
+                padding: 12px;
+            }
+            .card-title {
+                font-size: 14px;
+            }
+            .card-preview {
+                font-size: 12px;
+            }
+            .card-footer {
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+            .score-bar-4 {
+                max-width: 90px;
+            }
+            .score-segment {
+                height: 6px;
+            }
+            .card:hover {
+                transform: none;
+            }
+
+            /* Modal */
+            .modal-backdrop {
+                padding: 0;
+                align-items: flex-end;
+            }
+            .modal {
+                max-width: 100%;
+                max-height: 92vh;
+                border-radius: 16px 16px 0 0;
+                border-bottom: none;
+            }
+            .modal-header {
+                padding: 14px 16px;
+            }
+            .modal-title-input {
+                font-size: 18px;
+            }
+            .close-btn {
+                width: 44px;
+                height: 44px;
+                font-size: 22px;
+                flex-shrink: 0;
+            }
+            .modal-body {
+                padding: 16px;
+                gap: 14px;
+            }
+            .form-section label {
+                font-size: 11px;
+            }
+            .form-section textarea,
+            .form-section input[type="text"],
+            .select-input {
+                padding: 14px 16px;
+                font-size: 16px;
+                min-height: 48px;
+            }
+            .form-section textarea {
+                min-height: 80px;
+            }
+            .score-row {
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+            .score-row label {
+                min-width: 100%;
+                font-size: 12px;
+            }
+            .score-average-row {
+                margin-top: 10px;
+                padding-top: 10px;
+                flex-wrap: wrap;
+            }
+            .modal-footer {
+                padding: 14px 16px;
+            }
+            .delete-btn {
+                padding: 12px 16px;
+                min-height: 44px;
+            }
+
+            /* Checklists in modal */
+            .checklist {
+                padding: 12px;
+            }
+            .checklist-title-input {
+                font-size: 14px;
+            }
+            .item-checkbox {
+                width: 24px;
+                height: 24px;
+                min-width: 24px;
+                min-height: 24px;
+            }
+            .item-text {
+                font-size: 15px;
+                min-height: 24px;
+            }
+            .add-item-btn {
+                padding: 12px;
+                font-size: 14px;
+                min-height: 44px;
+            }
+            .item-assignee, .item-status {
+                padding: 8px 10px;
+                font-size: 12px;
+                min-height: 40px;
+            }
+            .add-checklist-btn {
+                padding: 10px 14px;
+                font-size: 13px;
+                min-height: 44px;
+            }
+
+            /* Task summary */
+            .tasks-summary {
+                padding: 12px 16px;
+            }
+            .tasks-summary h2 {
+                font-size: 13px;
+                margin-bottom: 10px;
+            }
+            .tasks-summary-grid {
+                grid-template-columns: 1fr;
+                gap: 14px;
+            }
+            .tasks-summary-column {
+                padding: 12px;
+            }
+            .tasks-summary-column h3 {
+                font-size: 14px;
+                margin-bottom: 10px;
+            }
+            .task-summary-item {
+                padding: 10px 12px;
+                font-size: 13px;
+                gap: 8px;
+                flex-wrap: wrap;
+            }
+            .task-summary-item .task-card-title {
+                max-width: 100%;
+                font-size: 11px;
+            }
+            .task-summary-item .task-text {
+                font-size: 13px;
+            }
+            .task-summary-item .task-status-select {
+                min-width: 100px;
+                padding: 8px 10px;
+                font-size: 12px;
+                min-height: 40px;
+            }
+            .task-summary-add-btn {
+                width: 32px;
+                height: 32px;
+                font-size: 18px;
+                min-width: 44px;
+                min-height: 44px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .task-summary-add-form {
+                flex-wrap: wrap;
+            }
+            .task-summary-add-form input {
+                min-height: 44px;
+                font-size: 16px;
+            }
+            .task-summary-add-form select {
+                min-height: 44px;
+                padding: 10px 12px;
+            }
+            .task-summary-add-form button {
+                padding: 12px 16px;
+                min-height: 44px;
+            }
+            .task-summary-item .task-delete-btn,
+            .task-summary-item .task-unassign-btn {
+                min-width: 44px;
+                min-height: 44px;
+                padding: 10px;
+                font-size: 18px;
+            }
+            .tasks-summary-done-toggle {
+                padding: 10px 0;
+                font-size: 12px;
+                min-height: 44px;
+                align-items: center;
+            }
+
+            /* Access gate on mobile */
+            .access-gate {
+                padding: 20px 16px;
+                justify-content: safe center;
+            }
+            .access-gate h1 {
+                font-size: 22px;
+                text-align: center;
+            }
+            .access-gate p {
+                font-size: 14px;
+                text-align: center;
+            }
+            .access-gate form {
+                max-width: 100%;
+            }
+            .access-gate input {
+                padding: 16px 18px;
+                font-size: 16px;
+                min-height: 52px;
+            }
+            .access-gate button {
+                padding: 16px;
+                font-size: 16px;
+                min-height: 52px;
+            }
+
+            /* Loading overlay */
+            .loading-text {
+                font-size: 13px;
+                padding: 0 16px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .header-left h1 {
+                font-size: 16px;
+            }
+            .column {
+                min-width: 260px;
+                max-width: 260px;
+            }
+            .modal {
+                max-height: 95vh;
+            }
+            .tasks-summary-column h3 {
+                font-size: 13px;
+            }
+        }
+
+        /* Safe area for notched devices */
+        @supports (padding: env(safe-area-inset-bottom)) {
+            .modal {
+                padding-bottom: env(safe-area-inset-bottom);
+            }
+            .board {
+                padding-left: max(16px, env(safe-area-inset-left));
+                padding-right: max(16px, env(safe-area-inset-right));
+            }
+            .main-nav {
+                padding-left: max(12px, env(safe-area-inset-left));
+                padding-right: max(12px, env(safe-area-inset-right));
+            }
+            .header {
+                padding-left: max(16px, env(safe-area-inset-left));
+                padding-right: max(16px, env(safe-area-inset-right));
+            }
         }
     </style>
 </head>
